# vukantut

./: CMakeLists.txt  Camera.cpp  Camera.h  DepthImage.h  EasyImage.h  GameObject.cpp  GameObject.h  Mesh.h  README.md  Vertex.h  VulcanTutorial.vcxproj  VulcanTutorial.vcxproj.filters  VulkanTutorial.cpp  VulkanUtils.h  frag.spv  runCompiler.bat  runCompiler.sh  shader.frag  shader.vert  tiny_obj_loader.h  vert.spv
Debug/: vc141.idb
Debug/VulcanTutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulcanTutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
